<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Handl Provider</string>
    <string name="action_settings">Settings</string>
    <string name="check_login">Please check your e-mail and password</string>
    <string name="press_again_to_exit">Press again to close ReceptionApp</string>
    <string name="not_valid_email">Please enter valid email id</string>
    <string name="out_of_memory">Out Of Memory</string>
    <string name="not_sufficient_permissions">Not sufficient permissions \n Goto Settings></string>
    <string name="permissionss">>Permissions</string>
    <string name="choose_image_source">Choose Image Resource</string>
    <string name="please_relaunch">"Please relaunch "</string>
    <string name="check_gps">Location Update has encountered a problem. Please Check GPS is ON or OFF</string>
    <string name="gps">" - GPS"</string>
    <string name="this_device_is_not_supported">This Device is not supported</string>
    <string name="problem_connecting_to_the_server">Problem connecting to server,please try later.</string>
    <string name="connecting_to_internet">" Problem connecting to internet,please try again."</string>
    <string name="connection_failed">" Connection failed,please try again."</string>
    <string name="bad_request">" Bad request,please try again."</string>
    <string name="not_found_please">" Not found,please try again."</string>
    <string name="session_timeout_redirecting">Session timeout, Redirecting to login</string>
    <string name="request_timeout_slow_connection">"Request Timeout. Maybe due to slow connection"</string>
    <string name="netwrk_status">Network Status</string>
    <string name="retry">Retry</string>
    <string name="press_one_more_time">Press one more time to push app into background</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account? Sign Up</string>
    <string name="send">Send</string>
    <string name="a_link_has">A link has been send to your email   please check and reset your password</string>
    <string name="success_msg">Success</string>
    <string name="soemthing_went_wrong">Somethong went wrong</string>
    <string name="all_log_clear_successfully">All Logs Clear Successfully</string>
    <string name="retry_caps">RETRY</string>
    <string name="exit_caps">EXIT</string>
    <string name="close">Close</string>
    <string name="demo_expired">Demo Expired</string>
    <string name="contact_company_info">Please contact : shiv@toxsl.com</string>
    <string name="total_errors">Total error :</string>
    <string name="snapshot_saved">Snapshot saved into gallery</string>
    <string name="permission_denied_ex_strorage">Permission denied to read your External storage</string>
    <string-array name="select_item">
        <item>@string/help</item>
        <item>@string/terms_amp_conditions</item>
        <item>@string/privacy_policy</item>
    </string-array>
    <string-array name="drawer_items">
        <item>Home</item>
        <item>Messages</item>
        <item>My Appointments</item>
        <item>Payment</item>
        <item>Help</item>
        <item>Notifications</item>
        <item>My Calendar</item>
        <item>Business Settings</item>
        <item>Insights</item>
        <item>Promos</item>
        <item>My Details</item>
        <item>Legal</item>
        <item>Logout</item>
    </string-array>
    <string-array name="day_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string-array name="drawer_new_items">
        <item>Home</item>
        <item>My Appointments</item>
        <item>My Calendar</item>
        <item>Business &amp; Personal Settings</item>
        <item>Insights</item>
        <item>Messages</item>
        <item>Promos</item>
        <item>Legal</item>
        <item>Logout</item>
    </string-array>
    <string name="error">Restfull error</string>
    <string name="api_is_in_maintenance">Api is in maintenance</string>
    <string name="api_is_expired">Api is in Expired</string>
    <string name="retry_cap">RETRY</string>
    <string name="login_failed">Login failed</string>
    <string name="location_permission_not_specified">Location Permission not specified</string>
    <string name="gps_not_enabled">GPS not enabled</string>
    <string name="not_connected_to_internet">Not connected to Internet</string>
    <string name="poor_internet_connection">Poor internet connection</string>
    <string name="view_profile">View Profile</string>
    <string name="login">Login</string>
    <string name="please_wait">Please wait</string>
    <string name="after_permission">after permission</string>
    <string name="forgot_your_password">Forgot Password</string>
    <string name="enter_your_email_below_to_receive_your_reset_password_instructions">Enter your registered email to reset password.</string>
    <string name="email_id">Email Id</string>
    <string name="continue_as_a_guest">Continue as a guest</string>
    <string name="signup">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="otp_verify">OTP Verification</string>
    <string name="otp_">OTP</string>
    <string name="otp_text">Enter your four digit OTP below to verify your email address.</string>
    <string name="submit">Submit</string>
    <string name="or_connect_with">or connect with</string>
    <string name="english">English</string>
    <string name="ok">OK</string>
    <string name="share_location">Share Location</string>
    <string name="city">City</string>
    <string name="postal_code">Post Code</string>
    <string name="continu">Continue</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="agree_terms">I agree to <font fgcolor="#4fb6c5">Terms &amp; Conditions</font></string>
    <string name="register">Register</string>
    <string name="please_enter_you_mobile_phone_to_complete_registration">Please enter you mobile phone to complete registration</string>
    <string name="by_continuing_you_agree_to_our">"By continuing you agree to our "</string>
    <string name="t_cs"><![CDATA[T&Cs]]></string>
    <string name="please_also_check_our">"Please also check our "</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="see_here">see here</string>
    <string name="we_use_data_to_offer_you_a_person">We use data to offer you a personalized experience and to better understand and improve our services.</string>
    <string name="more_infor">"For more information "</string>
    <string name="register_you_house_to_save_time_n_e_g_grandma_s_home_my_home">Register you house to save time\n(E.G GRANDMA\'S HOME, MY HOME)</string>
    <string name="add_nickname">Address Nickname</string>
    <string name="address">Address</string>
    <string name="add_to_my_homes">+ Add to my homes</string>
    <string name="welcome">welcome to</string>
    <string name="conitnue_with_email">Sign Up with email</string>
    <string name="or">OR</string>
    <string name="add_payment_method">Add a Payment Method</string>
    <string name="card_number">Card Number</string>
    <string name="mm">MM</string>
    <string name="yy">YY</string>
    <string name="cvv">CVV</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_methd">Payment method</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="my_homes">My Homes</string>
    <string name="no_data_found">No data found</string>
    <string name="no_noti_found">No notifications</string>
    <string name="write_message">Write message</string>
    <string name="change_password">Change Password</string>
    <string name="change_passwd">Change password</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="condfirm">Confirm</string>
    <string name="add_new_home">Add a new home</string>
    <string name="warning_n_ndue_to_the_number_of_rooms_selected_there_is_a_possibility_that_not_all_rooms_will_be_done_within_a_day_so_you_will_need_to_re_book_with_the_same_or_another_provider_for_more_than_one_appointments">WARNING!\n\nDue to the number of rooms selected there is a possibility that not all rooms will be done within a day so you will need to re-book with the same or another provider for more than one appointments.</string>
    <string name="how_many_rooms_do_you_need_painting">How many rooms do you need painting?</string>
    <string name="number_of_rooms">Number of Rooms</string>
    <string name="nnextt">Next</string>
    <string name="remember_information_for_next_time">Remember information for next time</string>
    <string name="pruning">Pruning</string>
    <string name="what_garden_services_do_you_need_nnote_square_feet_doesn_t_need_to_be_exact_but_your_best_estimate_will_allow_a_better_calculation_of_time_needed_for_the_professional">What garden services do you need?\nNote: Square feet doesn\'t need to be exact but your best estimate will allow a better calculation of time needed for the professional.</string>
    <string name="how_many">How many?</string>
    <string name="trees">Trees</string>
    <string name="bushes">Bushes</string>
    <string name="other">Other</string>
    <string name="deweeding">Deweeding</string>
    <string name="squarefeet">Squarefeet</string>
    <string name="spraying">Tree Spraying</string>
    <string name="how_many_furniture_do_you_need_to_assemble">How many furniture do you need to assemble?</string>
    <string name="select_that_apply_to_you">Select that apply to you</string>
    <string name="do_you_have_any_other_requests_for_your_provider">Do you have any other requests/allergies or restrictions that your clients needs to be aware of?</string>
    <string name="type_here">Type here</string>
    <string name="what_age">What age?</string>
    <string name="what_grade">What grade?</string>
    <string name="for_how_many_kids_and_what_level_will_the_tutor_be_needed_for">For how many kids and what level will the tutor be needed for?</string>
    <string name="contact">Contact</string>
    <string name="send_us_an_email_if_you_have_any_questions_or_need_to_contact_us">Send us an email if you have any questions or need to contact us</string>
    <string name="topic">Topic</string>
    <string name="reviews">Reviews</string>
    <string name="add_to_my_services">Add to My Services</string>
    <string name="how_much_do_you_charge_per_hour_for">How much do you charge per hour for this service per hour?</string>
    <string name="earnings">Earnings</string>
    <string name="personal">Personal</string>
    <string name="general">General</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="total">Total</string>
    <string name="euros">€ (euro)</string>
    <string name="total_earnings_using_this_app">Total Earnings using this app</string>
    <string name="years_using_handl">years using handl</string>
    <string name="tasks_completed">tasks completed</string>
    <string name="select_date">Select Date</string>
    <string name="price">Price</string>
</resources>