<?xml version="1.0" encoding="utf-8"?><!--
  ~ @copyright : ToXSL Technologies Pvt. Ltd. < www.toxsl.com >
  ~ @author     : Shiv Charan Panjeta < shiv@toxsl.com >
  ~ All Rights Reserved.
  ~ Proprietary and confidential :  All information contained herein is, and remains
  ~ the property of ToXSL Technologies Pvt. Ltd. and its partners.
  ~ Unauthorized copying of this file, via any medium is strictly prohibited.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handleClick"
            type="com.handlService.app.utils.ClickHandler" />

    </data>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/pullToRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:elevation="@dimen/_5sdp"
                android:orientation="horizontal"
                android:translationZ="@dimen/_5sdp"
                android:visibility="gone"
                android:weightSum="2"
                tools:targetApi="lollipop">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/personalTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/daycolor"
                    android:gravity="center"
                    android:onClick="@{(View)->handleClick.onHandleClick(View)}"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/personal"
                    android:textColor="@color/sub_sentence_color" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/generalTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/White"
                    android:gravity="center"
                    android:onClick="@{(View)->handleClick.onHandleClick(View)}"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/general"
                    android:textColor="@color/sub_sentence_color" />


            </LinearLayout>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/earningsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/lato_semibold"
                android:gravity="center"
                android:text="@string/earnings"
                android:textColor="@color/sentence_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:elevation="@dimen/_5sdp"
                android:orientation="horizontal"
                android:translationZ="@dimen/_5sdp"
                android:weightSum="4"
                tools:targetApi="lollipop">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/dailyTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/daycolor"
                    android:gravity="center"
                    android:onClick="@{(View)->handleClick.onHandleClick(View)}"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/daily"
                     />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/weeklyTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/White"
                    android:gravity="center"
                    android:onClick="@{(View)->handleClick.onHandleClick(View)}"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/weekly"
                     />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/monthlyTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/White"
                    android:gravity="center"
                    android:onClick="@{(View)->handleClick.onHandleClick(View)}"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/monthly"
                     />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/totalTV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/White"
                    android:gravity="center"
                    android:onClick="@{(View)->handleClick.onHandleClick(View)}"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/total"
                     />


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/selectDateTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:hint="@string/select_date"
                android:onClick="@{(View)->handleClick.onHandleClick(View)}"
                android:padding="@dimen/_8sdp"
                android:textColor="@color/sub_sentence_color"
                android:textColorHint="@color/sub_sentence_color"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateTV"
                tools:targetApi="lollipop" />


            <LinearLayout
                android:id="@+id/chartLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:orientation="vertical">

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_300sdp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/totalLL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/totalEarnTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/ic_baseline_brightness_1_24"
                    android:gravity="center"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/total_earnings_using_this_app"
                    android:textColor="@color/sub_sentence_color" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/yearsTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/ic_baseline_brightness_1_24"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/years_using_handl"
                    android:gravity="center"
                    android:textColor="@color/sub_sentence_color" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/taskTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/ic_baseline_brightness_1_24"
                    android:gravity="center"
                    android:textColor="@color/White"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/tasks_completed"
                    android:textColor="@color/sub_sentence_color" />


            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/reviewTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_20sdp"
                android:fontFamily="@font/lato_semibold"
                android:gravity="center"
                android:text="@string/reviews"
                android:textColor="@color/sentence_color" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/reviewRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="1"
                tools:listitem="@layout/adapter_reviews"
                tools:targetApi="lollipop" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/noDataTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingVertical="@dimen/_20sdp"
                android:text="@string/no_data_found"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>