<?xml version="1.0" encoding="utf-8"?><!--
  ~ @copyright : ToXSL Technologies Pvt. Ltd. < www.toxsl.com >
  ~ @author     : Shiv Charan Panjeta < shiv@toxsl.com >
  ~ All Rights Reserved.
  ~ Proprietary and confidential :  All information contained herein is, and remains
  ~ the property of ToXSL Technologies Pvt. Ltd. and its partners.
  ~ Unauthorized copying of this file, via any medium is strictly prohibited.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handleClick"
            type="com.handlService.app.utils.ClickHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_bg">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/contact"
            android:textAllCaps="true"
            android:textColor="@color/sentence_color"
            app:fontFamily="@font/lato_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/emailTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/send_us_an_email_if_you_have_any_questions_or_need_to_contact_us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTV" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/emailET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@color/White"
            android:elevation="@dimen/_1sdp"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTV"
            tools:targetApi="lollipop" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/topicET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/White"
            android:elevation="@dimen/_1sdp"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/topic"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:singleLine="true"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@+id/emailET"
            app:layout_constraintStart_toStartOf="@+id/emailET"
            app:layout_constraintTop_toBottomOf="@+id/emailET"
            tools:targetApi="lollipop" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/conemailET"
            android:layout_width="0dp"
            android:fontFamily="@font/lato_regular"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/White"
            android:gravity="start"
            android:hint="@string/write_message"
            android:imeOptions="actionDone"
            android:inputType="textLongMessage|textMultiLine"
            android:maxHeight="@dimen/_100sdp"
            android:elevation="@dimen/_1sdp"
            android:maxLines="4"
            android:minHeight="@dimen/_120sdp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@+id/topicET"
            app:layout_constraintStart_toStartOf="@+id/topicET"
            app:layout_constraintTop_toBottomOf="@+id/topicET"
            tools:targetApi="lollipop" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/submitTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/mid_blue_button"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:onClick="@{(View)->handleClick.onHandleClick(View)}"
            android:padding="@dimen/_10sdp"
            android:text="@string/submit"
            android:textColor="@color/White"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/emailET"
            app:layout_constraintStart_toStartOf="@+id/emailET" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>