<?xml version="1.0" encoding="utf-8"?><!--
  ~ @copyright : ToXSL Technologies Pvt. Ltd. < www.toxsl.com >
  ~ @author     : Shiv Charan Panjeta < shiv@toxsl.com >
  ~ All Rights Reserved.
  ~ Proprietary and confidential :  All information contained herein is, and remains
  ~ the property of ToXSL Technologies Pvt. Ltd. and its partners.
  ~ Unauthorized copying of this file, via any medium is strictly prohibited.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="handleClick"
            type="com.handlService.app.utils.ClickHandler" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_bg"
        android:padding="@dimen/_20sdp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/questionTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/how_much_do_you_charge_per_hour_for"
            android:textColor="@color/sub_sentence_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/priceET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/White"
            android:fontFamily="@font/lato_regular"
            android:hint="@string/price"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:padding="@dimen/_10sdp"
            android:maxLength="10"
            android:singleLine="true"
            android:textColorHint="@color/text_hint_color"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/questionTV" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/priceTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:textColor="@color/sub_sentence_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceET" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/euroTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:text="@string/euros"
            android:textColor="@color/sub_sentence_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/priceTV" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/mid_blue_button"
            android:fontFamily="@font/lato_regular"
            android:gravity="center"
            android:onClick="@{(View)->handleClick.onHandleClick(View)}"
            android:padding="@dimen/_10sdp"
            android:text="@string/add_to_my_services"
            android:textColor="@color/White"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>